pg search working, added a search icon but have to fix input text spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,3 +24,13 @@
     color: $green;
   }
 }
+#search-icon{
+  position: absolute;
+  z-index: 1;
+  top: 11px;
+  left: 16px;
+  color: #bbb;
+}
+.search-bar{
+  position:relative;
+}
